[tool.poetry]
name = "oah"
version = "0.1.0"
description = "Online Additive Hyperplanes (OAH) for constructive online classification"
authors = ["Jerzy Krawczuk <j.krawczuk@pb.edu.pl>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "oah", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
matplotlib = "^3.8"
tqdm = "^4.66"
pyqt5 = "^5.15.11"
river = "^0.23.0"
typing-extensions = "^4.12"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
